# tqec_optimizer

./: .gitignore  CMakeLists.txt  README.md  a_circuit_creater.py  main.py  run.sh
data/: a.json  circuit_generator.py  cnot.json  sample.json  swap.json  toffoli.json  y.json
lib/: circuit.py  circuit_reader.py  circuit_writer.py  graph.py  position.py
lib/relocation/: module.py  relocation.py
src/placement/: CMakeLists.txt
src/placement/src/: main.cpp
src/topology/: CMakeLists.txt
src/topology/src/: main.cpp
src/topology/src/graph/: edge.hpp  node.hpp  vector3d.hpp
src/topology/src/module/: loop.hpp  loop_factory.cpp  loop_factory.hpp  module.cpp  module.hpp  module_factory.cpp  module_factory.hpp
src/topology/src/placement/: compaction.cpp  compaction.hpp  relocation.cpp  relocation.hpp  sequence_triple.cpp  sequence_triple.hpp  test.hpp
tqec_optimizer/: circuit.py  circuit_reader.py  circuit_writer.py  edge.py  graph.py  node.py  position.py  test.py  vector3d.py
tqec_optimizer/braidpack/: braid_pack.py
tqec_optimizer/relocation/: allocation.py  best_first_search.py  bfs.py  compaction.py  local_search.py  module.py  module_factory.py  module_list_factory.py  neighborhood_generator.py  relocation.py  rip_and_reroute.py  routing.py  sa.py  sequence_triple.py  tqec_evaluator.py  tsp.py
tqec_optimizer/transformation/: best_first_search.py  loop.py  transformation.py
